Task #34, replace java util collection with vavr immutable collection